Added:printing result of promise object

--- a/9_promises/index.html
+++ b/9_promises/index.html
@@ -10,6 +10,9 @@
 <body>
 
 	<h1>ES6 here:Promise object</h1>
+	<div id='html_page'>
+		
+	</div>
 	<script src="main.js"></script>
 </body>
 </html>
